--- a/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/static/css/style.css
+++ b/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/static/css/style.css
@@ -8,7 +8,7 @@ body {
     background: #CCFFCC;
 }
 
-.wrap {    
+.wrap {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
@@ -25,8 +25,8 @@ body {
 .element,
 .counter {
     background: lightcyan;
-    border: 6px solid white;
-    margin: 30px 0;
+    border: 5px solid white;
+    margin: 8px 0;
 }
 
 .text {
@@ -61,14 +61,15 @@ body {
 .img img {
     border: 8px solid blue;
 }
+
 /* #CCFFCC */
 
 .top {
-    background: #161066;
+    background: #bdbbda;
     margin: 0;
     border: none;
     cursor: pointer;
-    font-size: 18px;
+    font-size: 15px;
 }
 
 .top a {
@@ -83,13 +84,14 @@ body {
     padding: 20px 10px 50px;
 }
 
-.stady_text {
+.tltool2_text {
     padding: 10px;
     box-sizing: border-box;
+    font-size: 13px;
 }
 
 .menu ul {
-    display: flex;    
+    display: flex;
     list-style: none;
     font-size: 20px;
 }
@@ -103,7 +105,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;    
+    align-items: center;
 }
 
 /* рабочий элемент */
@@ -120,43 +122,45 @@ body {
     text-align: justify;
 }
 
-.menu a{
+.menu a {
     color: black;
     font-weight: 600;
     text-decoration: none;
 }
 
-a img{
+a img {
     width: 110px;
     height: 90px;
     object-fit: cover;
     object-position: center;
-    border-radius: 50%; /* Создает круг */
+    border-radius: 50%;
+    /* Создает круг */
     overflow: hidden;
 }
 
-.auth{
+.auth {
     border: none;
 }
 
 /* #CCFFFF    #161066    navy */
-.top {
+/* .top {
     background: #161066;
     margin: 0;
     border: none;
     cursor: pointer;
     font-size: 18px;
-}
+} */
 
-.exit{
+.exit {
     background: transparent;
     border: none;
-    
+
     font-size: 20px;
     cursor: pointer;
 }
 
-h1, h3 {
+h1,
+h3 {
     color: #04450a;
     text-align: center;
     background-color: #CCFFCC;
