--- a/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/templates/techlog_tools/home.html
+++ b/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/templates/techlog_tools/home.html
@@ -5,7 +5,7 @@
 <!--    <h2>Home page</h2>-->
     <h1>Технический учёт инструментов и запчастей (техники)</h1>
 <div class="img">
-    <img src="{% static 'techlog_tools/LineOfTools_1.png' %}" alt="">
+    <img src="{% static 'techlog_tools/LineOfTools_1.png' %}" alt="line_img">
 </div>
 <h3 class="count">Сайт представляет из себя Каталог-приложение с базой инструмента, запчастей (техники). Ниже представлены некоторые достаточно распространённые инструменты с возможностью их заказа в интернет-магазине.</h3>
 <div class="block">
