Task_6_forDZ_83_Py12 add menu spare parts and filling out the DB TelogSpparts models

--- a/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/templates/techlog_tools/base.html
+++ b/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/templates/techlog_tools/base.html
@@ -21,6 +21,7 @@
                 <li><a href="{% url 'home' %}">Главная</a></li>
                 <li><a href="{% url 'techlogtools' %}">Инструменты</a></li>
                 <!--для запчастей-->
+                <li><a href="{% url 'telogspparts' %}">Запчасти</a></li>
                 <li>
                     <form action="{% url 'exitappuser' %}" method="post">
                         {% csrf_token %}
