--- a/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/static/css/style.css
+++ b/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/static/css/style.css
@@ -11,7 +11,7 @@ body {
 .wrap {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 10px 30px;
     box-sizing: border-box;
 }
 
@@ -30,6 +30,7 @@ body {
     width: auto;
     /* max-height: 200px; */
 }
+
 /* .limit ul {
     display: flex;    
     overflow: visible;
@@ -38,13 +39,17 @@ body {
 .limit {
     display: flex;
     flex-direction: column;
-    height: 140px; /* Ограничиваем высоту родителя */
-    overflow: hidden; /* Скрываем лишнее */
+    height: 140px;
+    /* Ограничиваем высоту родителя */
+    overflow: hidden;
+    /* Скрываем лишнее */
 }
 
 .limit ul {
-    flex-grow: 1; /* ul будет занимать всё доступное место */
-    overflow-y: auto; /* Прокрутка только для списка */
+    flex-grow: 1;
+    /* ul будет занимать всё доступное место */
+    overflow-y: auto;
+    /* Прокрутка только для списка */
     max-width: fit-content;
     list-style: none;
 }
@@ -143,13 +148,16 @@ body {
     /* Отступ от основного текста */
     font-size: 0.9em;
     color: rgb(110, 22, 22);
-    text-align: left;    
+    text-align: left;
 }
 
 .menu ul {
     display: flex;
+    justify-content: space-around;
+    align-items: center;
     list-style: none;
     font-size: 20px;
+    /* flex-direction: row; - по умолчанию */
 }
 
 
@@ -277,17 +285,149 @@ span b {
     display: flex;
     flex-direction: column;
 }
+
 .blkphoto img {
     max-width: 500px;
     height: auto;
 }
 
 .tltool2_text2 a {
-    text-decoration: underline; /* Стандартное подчёркивание */
+    text-decoration: underline;
+    /* Стандартное подчёркивание */
     color: #051006;
     font-weight: 800;
-    text-decoration-color: rgb(255, 0, 0);  /* Цвет подчёркивания  */
+    text-decoration-color: rgb(255, 0, 0);
+    /* Цвет подчёркивания  */
     /* text-decoration-thickness: 5px;  Толщина */
     padding-top: 0;
     padding-bottom: 15px;
+}
+
+/* для div класса .wrap, у которого потомок класса .loginuser */
+.wrap:has(.loginuser) {
+    display: flow-root;    
+    /* Центрирование по горизонтали */
+    justify-items: center;
+    /* Центрирование по вертикали */
+    align-items: center;
+}
+
+/* .register {
+    box-shadow: 0 2px 12px 2px #04450a;
+    padding: 40px;
+    border-radius: 6px;
+} */
+.loginuser {
+    box-shadow: 0 2px 12px 2px #04450a;
+    padding: 40px;
+    border-radius: 6px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+/* .register div {
+    margin-bottom: 20px;
+    margin: 20px 90px;
+} */
+.loginuser div {
+    /* margin-bottom: 20px; */
+    /* margin: 20px 90px; */
+    width: 50%;
+}
+
+.btn {
+    width: 60%;
+    padding: 5px;
+    margin: 10px;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+/* Выбрать .loginuser, только если внутри есть тег div */
+.loginuser:has(div) {
+    /* Стили для .loginuser, как родителя div */
+    display: grid;
+    grid-auto-flow: row;
+    /* 3 строки одинаковой высоты: */
+    grid-template-rows: repeat(3, 1fr);
+    /* Центрирование по горизонтали (вместо 2-х атриб-в ниже): */
+    place-items: center;
+    align-content: center;
+    gap: 8px; /* - расстояние между строками */
+    /* padding: 10px; */
+    width: 100%;
+    height: 100%
+    
+}
+
+/* Выбирает div, внутри которого есть input и label */
+.loginuser > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    /* Cтили расположения внутри этого div*/
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    margin: 0px;
+    max-width: 100%;
+    max-height: 100%;
+    /* min-height: 5vh; */
+}
+
+/* для input#id_password, котрый лежит сразу после label */
+label[for="id_password"]+input#id_password {
+    position: absolute;
+    display: block;
+    font-size: 16px;    
+    margin: 13px 0 5px 150px;
+    cursor: pointer;
+    /* place-items: center; */
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+    /* #ccc */
+    width: 250px;
+    padding: 8px;
+    border: 1px solid #2200ff;
+    border-radius: 4px;
+}
+/* label, лежащий перед input#id_password () */
+label[for="id_password"] {
+    position: absolute;
+    margin: 13px 0 10px -115px;
+    /* padding: 0px 0 0px 0px; */
+    font-size: 18px;
+    width: 250px;
+}
+label[for="id_password"]::before {
+    content: '🔒'; /* Иконка замка */
+    margin-right: 10px;
+    font-size: 1.2em;
+    color: #888;
+}
+
+/* --------- то-же, но для логина --------- */
+/* для input#id_password, котрый лежит сразу после label */
+label[for="id_username"]+input#id_username {
+    position: absolute;
+    display: block;
+    font-size: 16px;    
+    margin: 13px 0 5px 150px;
+    cursor: pointer;
+    /* place-items: center; */
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+    /* #ccc */
+    width: 250px;
+    padding: 8px;
+    border: 1px solid #2200ff;
+    border-radius: 4px;
+    /* border-color: #2200ff; */
+}
+/* label, лежащий перед input#id_password () */
+label[for="id_username"] {
+    position: absolute;
+    /* margin: 18px 30px; */
+    margin: 20px 0 10px -235px;
+    font-size: 18px;
+    width: 250px;
 }
