--- a/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/templates/techlog_tools/loginuser.html
+++ b/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/templates/techlog_tools/loginuser.html
@@ -2,13 +2,12 @@
 
 {% block content %}
 
-<h3>{{ error }}</h3>
-
 <h1>Авторизация</h1>
-<form method="post" class="register">
+<h3>{{ error }}</h3>
+<form method="post" class="loginuser">
     {% csrf_token %}
     {{ form }}
     <button class="btn">Авторизация</button>
 </form>
-
+<!--в стилях произвести замену register на loginuser-->
 {% endblock %}
