--- a/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/templates/techlog_tools/registration.html
+++ b/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/templates/techlog_tools/registration.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 
-<h3>{{ error }}</h3>
-
 <h1>Регистрация</h1>
+<h3>{{ error }}</h3>
 <form method="post" class="register">
     {% csrf_token %}
     {{ form }}
+<!--        <label style="color: green">Проверка-label</label>-->
     <button class="btn">Зарегистрироваться</button>
 </form>
 
