--- a/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/templates/techlog_tools/base.html
+++ b/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/templates/techlog_tools/base.html
@@ -22,6 +22,8 @@
                 <li><a href="{% url 'techlogtools' %}">Инструменты</a></li>
                 <!--для запчастей-->
                 <li><a href="{% url 'telogspparts' %}">Запчасти</a></li>
+                <!--для ремонтов-->
+                <li><a href="{% url 'createautorepairs' %}">Авторемонт</a></li>
                 <li>
                     <form action="{% url 'exitappuser' %}" method="post">
                         {% csrf_token %}
