--- a/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/telog_spparts/templates/telog_spparts/repairs.html
+++ b/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/telog_spparts/templates/telog_spparts/repairs.html
@@ -10,7 +10,7 @@
             {% if repair.priority_rep %}
             <b>{{ repair.title }}</b>
             {% else %}
-            {{ repair.title }}
+            <p class="cvgrey">{{ repair.title }}</p>
             {% endif %}
 
             {% if repair.rep_memo %}
