--- a/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/telog_spparts/templates/telog_spparts/viewrepair.html
+++ b/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/telog_spparts/templates/telog_spparts/viewrepair.html
@@ -5,11 +5,26 @@
 <h3>{{ error }}</h3>
 
 <h2>{{ repair.title }}</h2>
-
+<!-- форма редактирования ремонта -->
 <form action="" method="post">
     {% csrf_token %}
     {{ repform }}
+    <!-- Здесь можно произвести редактирование
+    текущего ремонта и сохранение данных в базе -->
     <button class="btrep">Сохранить</button>
+</form>
+<!-- форма завершения ремонта с проставлением даты завершения "ready" -->
+<form action="{% url 'finished_repair' repair.id %}" method="post">
+    {% csrf_token %}
+    <!-- Нажатие на клавишу убирает ремонт из списка и
+     проставляет базу отметку времени завершения ремонта-->
+    <button class="btrep final">Готово (ремонт завершён)</button>
+</form>
+<!-- форма удаления ремонта из базы -->
+<form action="{% url 'delete_repair' repair.id %}" method="post">
+    {% csrf_token %}
+    <!-- Нажатие на клавишу удаляет ремонт из БД  -->
+    <button class="btrep del">Удалить (удаляет ремонт)</button>
 </form>
 
 {% endblock %}
