--- a/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/telog_spparts/templates/telog_spparts/repairs.html
+++ b/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/telog_spparts/templates/telog_spparts/repairs.html
@@ -29,4 +29,13 @@
     <button class="btn">Новый ремонт</button>
 </form>
 
+<!-- Завершённые ремонты -->
+{% if user.is_authenticated %}
+    <form action="{% url 'completed_reps' %}" method="post" class="repairs">
+        {% csrf_token %}
+        <b>Нажмите для отображения завершённых ремонтов:</b>
+        <button type="submit" class="btn">Завершённые ремонты</button>
+    </form>
+{% endif %}
+
 {% endblock %}
